Fixed page shifting because of scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  height: 100%;
+  scrollbar-gutter: stable;
+}
+
 body {
+  height: 100%;
   font-family: Arial, Helvetica, sans-serif;
   background-color: hsl(var(--theme-background));
 }
@@ -72,14 +78,6 @@ body {
   body {
     @apply bg-background text-foreground;
   }
-}
-
-html {
-  height: 100%;
-}
-
-body {
-  height: 100%;
 }
 
 @keyframes marquee {
